...

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="brightness">Brightness</string>
    <string name="measure_instruction">Put strip on black area with colour patches to the left. Hold camera above colour card until measurement is complete.</string>
    <string name="imageQuality">Image quality</string>
    <string name="prepare_test">Prepare for test</string>
    <string name="taking_photo">Taking photo</string>
    <string name="waiting">Waiting</string>
    <string name="success_quality_checks">Success! Quality check passed</string>
    <string name="stripTest">Strip Test</string>
    <string name="no_result">No result</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="just_a_moment">Just a moment…</string>
    <string name="checking_image_quality">Checking image quality</string>
    <string name="seconds">Sec.</string>
    <string name="detecting_color_card">Looking for colour card</string>
    <string name="no_strip_found">No strip found</string>
    <string name="ready_for_photo">Ready for photo</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="stop_test">Stop test</string>
    <string name="camera_not_good">The camera does not meet the minimum requirements.\n\nFor best results, at least 8 megapixel camera required.</string>
    <string name="tilt_camera_in_direction">Tilt camera in direction of arrow</string>
    <string name="move_camera_closer">Move camera closer to the card</string>
    <string name="avoid_shadows_on_card">Please avoid shadows on the card</string>
    <string name="prepare_camera_instruction">Don\'t take sample yet. Hold camera above colour card and adjust position until check succeeds.</string>

    <!--Water-->
...
    <string name="as_ins_3c">Add one <b>Reagent #2</b> powder pillow to the sample.</string>
    <string name="as_ins_4a">Immediately attach the cap to the reaction bottle.</string>
    <string name="as_ins_4b">Swirl continuously for 60 seconds. <b>Do not shake or invert or allow sample to get on the strip.</b></string>
    <string name="as_ins_5">Wait 20 minutes. Swirl twice during the reaction period.</string>
    <string name="as_ins_6">Remove the test strip from the cap and immediately place the test strip facing <b>left</b> on the Colour Reference Card and press <b>Start</b>.</string>
    <string name="fill_half_with_sample">Fill <b>HALF</b> of the vial with sample water.</string>
    <string name="collect_water_sample">Collect water sample.</string>
    <string name="prepare_sample_ka">Samples containing more than 1500 mg/l K must be diluted with distilled water.</string>
    <string name="prepare_sample_kb">The pH must be within the range 5 – 14. Adjust, if necessary, with calcium hydroxide.</string>
    <string name="finish_ka">Close the reagent bottle and the tube containing the test strips immediately after use.</string>
    <string name="finish_kb">Rinse the test vessel with distilled water only.</string>
    <string name="open_one_foil_and_add_powder">Open one foil packet and add powder contents to vial.</string>
    <string name="cap_vial_and_shake_rapidly">Cap vial and shake rapidly for <b>5 seconds</b>. Remove cap.</string>
    <string name="dip_strip_into_water_and_remove">Dip a strip into sample and remove immediately.</string>
    <string name="dip_strip_in_water_2_seconds">Dip a strip in the sample for at least <b>2 seconds</b> and remove.</string>
    <string name="dip_strip_move_back_forth_15_seconds">Dip the test strip into sample vial and rapidly move back and forth underwater for <b>15 seconds</b>.</string>
    <string name="dip_strip_move_back_forth_30_seconds">Dip the strip into sample and move back and forth for <b>30 seconds</b> in sample.</string>
    <string name="dip_sample_60_back_forward_250_sample">Dip the strip into <b>250+ ml </b> sample and move back and forth for <b>60 seconds</b> in sample.</string>
    <string name="immerse_reaction_zone">Immerse the reaction zone of the test strip in the pretreated sample (15 – 30 °C) for <b>1 second</b></string>
    <string name="dry_off_excess_water_place_on_towel">Dry off excess water. (e.g. place it on a towel)</string>
    <string name="shake_excess_water_once">Shake <b>once </b> the excess water from test strip.</string>
...
    <string name="allow_excess_liquid_to_run_off">Allow excess liquid to run off via the long edge of the strip onto an absorbent paper towel.</string>
    <string name="add_reagent_k1">Add <b>1 drop</b> of <b>reagent K-1</b> on the reaction zone and allow to react for <b>1 minute</b>.</string>
    <string name="fill_bottle_5ml">Fill the provided bottle with <b>5 ml</b> of your water sample.</string>
    <string name="add_10_drops_nh1">Add <b>10 drops</b> of the <b>NH4-1 Reagent</b> to the sample.</string>
    <string name="swirl_and_mix">Swirl the sample to mix the reagent.</string>
    <string name="dip_sample_5s">Dip the test strip into the sample for <b>5 seconds</b> and remove.</string>
    <string name="shake_excess_water_off">Shake excess water from the test strip.</string>
    <string name="place_strip_clr">Place the test strip with the patch facing <b>left</b> on the black area of the Colour Reference Card and press <b>Start</b>.</string>
    <string name="add_5_drops_po4_1">Add <b>5 drops</b> of the <b>PO4-1 Reagent</b> to the sample.</string>
    <string name="place_smaller_container">Place smaller container in the provided rack.</string>
    <string name="add_6_drops_po4_2">Add <b>6 drops</b> of the <b>PO4-2 Reagent</b> to the smaller container.</string>
    <string name="dip_sample_15s">Dip the test strip into the sample for <b>15 seconds</b> and remove.</string>
    <string name="dip_container_15s">Dip the test strip into the smaller tube for <b>15 seconds</b> and remove.</string>
    <string name="dip_sample_1s">Dip the test strip into the sample for <b>1 second</b> and remove.</string>
...
